# Simulation-of-students-bar

./: README.md
template/src/simulator-lib/: Bar.cpp  Bar.h  CMakeLists.txt  DoublyLinkedList.hpp  Group.cpp  Group.h  Student.cpp  Student.h  Tail.cpp  Tail.h  bar-simulator.cpp
template/test/: CMakeLists.txt  test-Group.cpp  test-Student.cpp  test-Tail.cpp  test-simulation.cpp
